# ORION

./: .gitignore  AREP_IMPLEMENTATION_ROADMAP.md  AREP_IMPLEMENTATION_SPECIFICATION.md  CLAUDE.md  IGNORE_THIS_AREP_COMPLETE_IMPLEMENTATION_SPECIFICATION.md  ORION_Design_Guide.docx  ORION_FILE_STRUCTURE.md  ORION_SAAS_ROADMAP.md  ORION_SCENARIO_TAXONOMY.md  PROPOSED_IMPLEMENTATION.md  README.md  autonomous_driving_simulation_platforms.docx  extract_pdf.py  setup_orion.bat  start.bat  start.ps1  start.sh
arep_implementation/: alembic.ini  arep_data.db  design_guide.txt  doc.txt  dump_users.py  extract.py  extract_design.py  generate_taxonomy.py  pyproject.toml
arep_implementation/arep/: __init__.py
arep_implementation/arep/analysis/: __init__.py  failure_clustering.py  regression_detector.py
arep_implementation/arep/api/: __init__.py  admin.py  app.py  auth.py  billing.py  middleware.py  model_store.py  models_routes.py  orgs.py  routes.py  schemas.py  sim_registry.py  ws.py
arep_implementation/arep/bridges/: __init__.py
arep_implementation/arep/cli/: __init__.py  run_suite.py
arep_implementation/arep/config/: __init__.py
arep_implementation/arep/core/: __init__.py  action.py  collision.py  observation.py  physics.py  random_manager.py  road.py  road_templates.py  state.py  ttc.py
arep_implementation/arep/database/: __init__.py  connection.py  models.py  repository.py
arep_implementation/arep/database/migrations/: __init__.py  env.py
arep_implementation/arep/evaluation/: __init__.py  collector.py  compliance.py  composite.py  reactivity.py  safety.py  stability.py
arep_implementation/arep/execution/: __init__.py  runner.py
arep_implementation/arep/maps/: __init__.py  xodr_parser.py
arep_implementation/arep/models/: __init__.py  http_adapter.py  interface.py  local_executor.py  resolver.py  sandbox.py
arep_implementation/arep/models/examples/: __init__.py  example_models.py
arep_implementation/arep/reporting/: __init__.py  pdf_generator.py
arep_implementation/arep/reporting/templates/: base.html  batch_report.html  comparison_report.html
arep_implementation/arep/scenario/: __init__.py  events.py  executor.py  osc_exporter.py  osc_importer.py  parameterizer.py  parser.py  schema.py  validator.py
arep_implementation/arep/search/: __init__.py  objective.py  optimizer.py  space.py
arep_implementation/arep/simulation/: __init__.py  engine.py  npc_bt.py  termination.py  time_manager.py  world.py
arep_implementation/arep/statistics/: __init__.py  aggregator.py
arep_implementation/arep/utils/: __init__.py  exceptions.py  hashing.py  logging_config.py  validators.py
arep_implementation/arep/visualization/: __init__.py  dashboard.py  plots.py
arep_implementation/arep/visualization/templates/: dashboard.html
arep_implementation/arep/worker/: __init__.py  celery_app.py  tasks.py
arep_implementation/config/: default.yaml
arep_implementation/scenarios/basic/: straight_road_empty.yaml  straight_road_lead_vehicle.yaml
arep_implementation/scripts/: bootstrap_superadmin.py  ws_smoke.py
arep_implementation/tests/: __init__.py  test_batch_queue.py  test_enhanced_physics.py  test_integration.py  test_model_submission.py  test_multitenancy.py  test_ws_smoke.py
orion-sdk/: pyproject.toml
orion-sdk/examples/: simple_model.py
orion-sdk/examples/docker_model/: Dockerfile  model_server.py
orion-sdk/orion_sdk/: __init__.py  cli.py  client.py  interface.py  uploader.py
(+107 files in other folders)
