[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arep"
version = "0.1.0"
description = "Autonomous Robustness Evaluation Platform"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.0",
    "scipy==1.11.3",
    "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.6",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",            # async test client for FastAPI
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",          # [P1] database migrations
    "psycopg2-binary>=2.9.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "stripe>=7.0.0",            # [P1] billing integration
    "jinja2>=3.1.0",            # [P2] report templates
]
worker = [
    "celery>=5.3.0",            # [P1] async task queue
    "redis>=5.0.0",             # [P1] Celery broker + result backend
    "flower>=2.0.0",            # [P1] Celery monitoring UI (optional)
    "cloudpickle>=3.0.0",       # [P1] model serialisation
]
search = [
    "cma>=3.3.0",               # [P2] CMA-ES adversarial search
    "scikit-learn>=1.3.0",      # [P2] DBSCAN failure clustering
]
reporting = [
    "weasyprint>=60.0",         # [P2] HTML → PDF generation
    "jinja2>=3.1.0",            # [P2] report templates
]
maps = [
    # No extra deps — xodr_parser uses stdlib xml.etree only
]
ros2 = [
    "pyzmq>=25.0",              # [P4] ZMQ transport for ROS2 bridge
    # rclpy is installed via ROS2 environment, not pip
]
all = [
    "arep[api,worker,search,reporting,maps]",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
